refac: add examples + doc

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -2,6 +2,10 @@
 name = "dataseries"
 version = "0.1.0"
 edition = "2021"
+description = "dataseries support for rust"
+repository = "https://github.com/cboudereau/dataseries/tree/main/rust"
+keywords = ["timeseries", "dataseries", "time-series", "data-series", "union"]
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
