--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: cd
-        run: cd rust
+        with:
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            README.md
       - name: debug
         run: ls -lha .
       - name: fmt
@@ -26,8 +28,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: cd
-      run: cd rust
     - name: build
       run: cargo build --verbose
     - name: run tests
