--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          path: rust
           sparse-checkout-cone-mode: false
           sparse-checkout: |
             rust
