--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          sparse-checkout: rust
+          sparse-checkout: |
+            rust
       - name: debug
         run: ls -lha .
       - name: fmt
