--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          path: test
+          path: ./
           sparse-checkout-cone-mode: false
           sparse-checkout: |
             rust
