--- a/.github/workflows/build-rs.yml
+++ b/.github/workflows/build-rs.yml
@@ -1,4 +1,4 @@
-name: build
+name: build-rs
 
 on:
   push:
@@ -10,7 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  lint: 
+  lint-rs: 
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -22,7 +22,7 @@ jobs:
         run: cd rust && cargo fmt --all -- --check
       - name: clippy
         run: cd rust && cargo clippy --all-targets --all-features -- -D warnings
-  build:
+  build-rs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
