--- a/.github/workflows/build-rs.yml
+++ b/.github/workflows/build-rs.yml
@@ -33,8 +33,6 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
@@ -47,11 +45,8 @@ jobs:
           curl -sL https://github.com/mozilla/grcov/releases/download/v0.8.18/grcov-x86_64-unknown-linux-gnu.tar.bz2 | tar jxf - -C "${HOME}/.local/bin"
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - name: Run xtask coverage
-        uses: actions-rs/cargo@v1
-        with:
-          command: cd rust && xtask
-          args: coverage
+      - uses: actions/checkout@v3
+        run: cd rust && cargo coverage
 
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v3
