--- a/.github/workflows/build-rs.yml
+++ b/.github/workflows/build-rs.yml
@@ -33,19 +33,20 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           override: true
           components: llvm-tools-preview
 
-      - name: Download grcov
+      - name: Download grcov 
         run: |
           mkdir -p "${HOME}/.local/bin"
           curl -sL https://github.com/mozilla/grcov/releases/download/v0.8.18/grcov-x86_64-unknown-linux-gnu.tar.bz2 | tar jxf - -C "${HOME}/.local/bin"
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - uses: actions/checkout@v3
+      - name: Coverage 
         run: cd rust && cargo coverage
 
       - name: Upload to codecov.io
