--- a/.github/workflows/build-rs.yml
+++ b/.github/workflows/build-rs.yml
@@ -52,4 +52,4 @@ jobs:
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v3
         with:
-          files: coverage/*.lcov
+          files: rust/coverage/*.lcov
