--- a/.github/workflows/publish-rs.yml
+++ b/.github/workflows/publish-rs.yml
@@ -1,6 +1,8 @@
 name: publish-rs
 
 on:
+  pull_request:
+    branches: [ "*" ]
   release:
     types: [published]
   workflow_dispatch:
@@ -16,6 +18,7 @@ jobs:
       with:
           toolchain: stable
           override: true
-    - uses: katyo/publish-crates@v1
+    - uses: katyo/publish-crates@v2
       with:
+          path: rust
           registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
