--- a/.github/workflows/build-rs.yml
+++ b/.github/workflows/build-rs.yml
@@ -4,10 +4,12 @@ on:
   push:
     branches: [ "main" ]
     paths:
+        - '.github/'
         - 'rust/**'
   pull_request:
     branches: [ "*" ]
     paths:
+        - '.github/'
         - 'rust/**'
 env:
   CARGO_TERM_COLOR: always
