--- a/.github/workflows/build-rs.yml
+++ b/.github/workflows/build-rs.yml
@@ -4,12 +4,12 @@ on:
   push:
     branches: [ "main" ]
     paths:
-        - '.github/'
+        - '.github/**'
         - 'rust/**'
   pull_request:
     branches: [ "*" ]
     paths:
-        - '.github/'
+        - '.github/**'
         - 'rust/**'
 env:
   CARGO_TERM_COLOR: always
