--- a/.github/workflows/build-java.yml
+++ b/.github/workflows/build-java.yml
@@ -22,5 +22,11 @@ jobs:
         distribution: 'temurin'
         java-version: '17'
         cache: 'maven'
+    
     - name: Build with Maven
       run: cd java && mvn -B package --file pom.xml
+    
+    - name: Upload to codecov.io
+      uses: codecov/codecov-action@v3
+      with:
+        flags: java
