--- a/java/pom.xml
+++ b/java/pom.xml
@@ -6,15 +6,29 @@
 
   <groupId>com.dataseries</groupId>
   <artifactId>dataseries</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
+  <packaging>jar</packaging>
+  <name>${project.groupId}:${project.artifactId}</name>
 
-  <name>dataseries</name>
-  <url>https://github.com/cboudereau/dataseries</url>
+  <description>data-series functions support for data-series and time-series.</description>
+  <url>https://github.com/cboudereau/dataseries/</url>
+
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>https://github.com/cboudereau/dataseries/blob/main/LICENSE</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <scm>
+    <url>https://github.com/cboudereau/dataseries/tree/main/java</url>
+  </scm>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>20</maven.compiler.source>
+    <maven.compiler.target>20</maven.compiler.target>
     <argLine>--enable-preview</argLine>
   </properties>
 
@@ -29,6 +43,26 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.5.0</version>
+
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <phase>site</phase>
+            <goals>
+              <goal>aggregate</goal>
+            </goals>
+            <configuration>
+              <additionalJOptions>
+                <additionalJOption>${argLine}</additionalJOption>
+              </additionalJOptions>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
