--- a/.github/workflows/build-java.yml
+++ b/.github/workflows/build-java.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
     paths:
-        - '.github/**'
+        - '.github/**-java.yml'
         - 'java/**'
   pull_request:
     branches: [ "*" ]
