--- a/.github/workflows/build-rs.yml
+++ b/.github/workflows/build-rs.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
     paths:
-        - '.github/**'
+        - '.github/**-rs.yml'
         - 'rust/**'
   pull_request:
     branches: [ "*" ]
