--- a/.github/workflows/publish-java.yml
+++ b/.github/workflows/publish-java.yml
@@ -23,7 +23,16 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Publish to GitHub Packages
+      - name: Set up Maven Central Repository
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
+      - name: Publish package
         run: cd java && mvn --batch-mode deploy
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
