--- a/.github/workflows/publish-java.yml
+++ b/.github/workflows/publish-java.yml
@@ -34,7 +34,7 @@ jobs:
           gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
       - name: Publish package
-        run: cd java && mvn --batch-mode deploy -P release
+        run: cd java && mvn --batch-mode deploy
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
