--- a/java/pom.xml
+++ b/java/pom.xml
@@ -12,7 +12,12 @@
 
   <description>data-series functions support for data-series and time-series.</description>
   <url>https://github.com/cboudereau/dataseries/</url>
-
+ <developers>
+    <developer>
+      <name>Clement Boudereau</name>
+      <email>cboudereau@gmail.com</email>
+    </developer>
+  </developers>
   <licenses>
     <license>
       <name>MIT License</name>
@@ -23,6 +28,8 @@
 
   <scm>
     <url>https://github.com/cboudereau/dataseries/tree/main/java</url>
+    <connection>scm:git:git://github.com/cboudereau/dataseries.git</connection>
+    <developerConnection>scm:git:ssh://github.com/cboudereau/dataseries.git</developerConnection>
   </scm>
 
   <distributionManagement>
@@ -41,6 +48,7 @@
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <argLine>--enable-preview</argLine>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
