--- a/java/pom.xml
+++ b/java/pom.xml
@@ -139,7 +139,7 @@
         <executions>
           <execution>
             <id>attach-javadocs</id>
-            <phase>site</phase>
+            <phase>package</phase>
             <goals>
               <goal>jar</goal>
             </goals>
