--- a/java/pom.xml
+++ b/java/pom.xml
@@ -12,7 +12,7 @@
 
   <description>data-series functions support for data-series and time-series.</description>
   <url>https://github.com/cboudereau/dataseries/</url>
- <developers>
+  <developers>
     <developer>
       <name>Clement Boudereau</name>
       <email>cboudereau@gmail.com</email>
@@ -93,6 +93,17 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>1.6.13</version>
+        <extensions>true</extensions>
+        <configuration>
+          <serverId>ossrh</serverId>
+          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+          <autoReleaseAfterClose>true</autoReleaseAfterClose>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
