--- a/java/pom.xml
+++ b/java/pom.xml
@@ -45,9 +45,10 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>20</maven.compiler.source>
+    <maven.compiler.target>20</maven.compiler.target>
     <argLine>--enable-preview</argLine>
+    <snippetPath>--snippet-path=${basedir}/src/test/java/io/github/cboudereau/dataseries</snippetPath>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -68,7 +69,7 @@
         <version>3.5.0</version>
         <configuration>
           <additionalJOptions>
-            <additionalJOption>${argLine}</additionalJOption>
+            <additionalJOption>${snippetPath} ${argLine}</additionalJOption>
           </additionalJOptions>
         </configuration>
         <reportSets>
@@ -144,7 +145,7 @@
         <version>3.5.0</version>
         <configuration>
           <additionalJOptions>
-            <additionalJOption>${argLine}</additionalJOption>
+            <additionalJOption>${snippetPath} ${argLine}</additionalJOption>
           </additionalJOptions>
         </configuration>
         <executions>
