--- a/.github/workflows/build-java.yml
+++ b/.github/workflows/build-java.yml
@@ -24,6 +24,8 @@ jobs:
       run: cd java && mvn -B package --file pom.xml
     
     - name: Upload to codecov.io
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       with:
         flags: java
